add the code for 8 microphone on the car

--- a/extractor_node/CMakeLists.txt
+++ b/extractor_node/CMakeLists.txt
@@ -13,9 +13,9 @@ find_package(message_filters REQUIRED)
 # generate the messages
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/AvReader.msg"
+  "msg/AvReaderCom.msg"
   DEPENDENCIES std_msgs sensor_msgs
 )
-
 
 # include the directories
 include_directories(include ${PROJECT_NAME}/include)
@@ -23,9 +23,11 @@ include_directories(include ${PROJECT_NAME}/include)
 # add the executable files
 # add_executable(extractor src/extractor.cpp)
 add_executable(extractor src/extractor_with_time_synchronizer.cpp)
+add_executable(extractor_car src/extractor_on_the_car.cpp)
 
 # link the libraries to the files
 ament_target_dependencies(extractor rclcpp std_msgs sensor_msgs cae_microphone_array message_filters)
+ament_target_dependencies(extractor_car  rclcpp std_msgs sensor_msgs cae_microphone_array message_filters)
 
 install(TARGETS
   extractor
@@ -33,6 +35,14 @@ install(TARGETS
 )
 
 rosidl_target_interfaces(extractor 
+  ${PROJECT_NAME} "rosidl_typesupport_cpp")
+
+install(TARGETS
+  extractor_car
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+rosidl_target_interfaces(extractor_car 
   ${PROJECT_NAME} "rosidl_typesupport_cpp")
 
 install(DIRECTORY
